Styled datepicker and corrected aligning issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -168,3 +168,16 @@ a.text-green:hover{
 .form-container .row:nth-child(even){
     background-color:#f9f9f9;
 }
+.that-one-label{
+    font-size: 0.8rem !important;
+    top: -26px !important;
+}
+.datepicker-modal{
+    height:350px;
+}
+.datepicker-date-display, .datepicker-table td.is-selected{
+    background-color: #65765d;
+}
+.datepicker-cancel, .datepicker-done, .is-today{
+    color: #65765d;
+}
